
    * Sistemato un bug relativo alla multipla connessione del pulsante view activity che veniva chiamato piu' volte.

    * Aggiunta la connessione tra i pulsanti edit e delete delle note ed il relativo controllo.

    * Aggiornato il metodo di trasferimento dell'utente loggato ai vari controlli.

2014-11-27 Marco Giammarini <m.giammarini@warcomeb.it>

    * Aggiunta la logica di gestione per la visualizzazione delle note. Il sistema è funzionante ma c'e' da rendere piu' ermetico il codice.

2014-11-14 Marco Giammarini <m.giammarini@warcomeb.it>

    * Piccolo fix nella funzione getEmployeeByLogin che restituiva un id non vero.

    * Aggiunta la finestra di dialog per visualizzare una nota. Per ora solo in versione Add.

    * Aggiunta tutta la logica di gestione dell'aggiunta di una nota ad una attivita'.

2014-11-07 Marco Giammarini <m.giammarini@warcomeb.it>

    * Ultimata l'implementazione della classe ActivityNote.

2014-10-29 Marco Giammarini <m.giammarini@warcomeb.it>

    * Aggiunta la selezione dell'intera riga e la disabilitazione alle modifiche sulle tabelle nella main window.

    * Aggiunta la parte grafica per la visualizzazione delle note nell'activitydialog.

2014-10-23 Marco Giammarini <m.giammarini@warcomeb.it>

    * Aggiunta la disabilitazione di alcune funzionalita' in base ai privilegi degli utenti.

2014-10-23 Marco Giammarini <m.giammarini@warcomeb.it>

    * Ultimata la gestione del login, anche se ancora l'utente loggato non viene salvato  nel sistema.

2014-10-20 Marco Giammarini <m.giammarini@warcomeb.it>

    * Implementato il controllo controlData() della classe LoginDialog.

2014-10-16 Marco Giammarini <m.giammarini@warcomeb.it>

    * Iniziata l'implementazione del login, aggiungendo anche la classe LoginController

2014-10-15 Marco Giammarini <m.giammarini@warcomeb.it>

    * Aggiunto il dialog per il login e quindi la classe LoginDialog.

2014-10-14 Marco Giammarini <m.giammarini@warcomeb.it>
